@startuml

title __BASE's Class Diagram__\n

  package com.rear_admirals.york_pirates {
    package com.rear_admirals.york_pirates.base {
      class BaseActor {
          - region : TextureRegion
          - boundingPolygon : Polygon
          + BaseActor()
          + act()
          + draw()
          + setRectangleBoundary()
          + setEllipseBoundary()
          + getBoundingPolygon()
          + overlaps()
          + getDepartment()
          + setDepartment()
          + getCollege()
          + setCollege()
          + setOriginCentre()
      }
    }
  }
  

  package com.rear_admirals.york_pirates {
    package com.rear_admirals.york_pirates.base {
      abstract class BaseScreen {
          # mainStage : Stage
          # uiStage : Stage
          # viewwidth : int
          # viewheight : int
          + BaseScreen()
          {abstract} + update()
          + render()
          + dispose()
          + resize()
          + show()
          + pause()
          + hide()
          + resume()
      }
    }
  }
  

  package com.rear_admirals.york_pirates {
    package com.rear_admirals.york_pirates.base {
      class PhysicsActor {
          - velocity : Vector2
          - acceleration : Vector2
          - maxSpeed : float
          - deceleration : float
          - autoAngle : boolean
          - anchor : boolean
          + PhysicsActor()
          + setAccelerationXY()
          + setAccelerationAS()
          + setDeceleration()
          + getSpeed()
          + setSpeed()
          + setMaxSpeed()
          + getMotionAngle()
          + addAccelerationAS()
          + act()
          + setAnchor()
          + isAnchor()
      }
    }
  }
  

  BaseActor -up-|> Group
  BaseActor o-- College : college
  BaseActor o-- Department : department
  BaseScreen -up-|> Screen
  BaseScreen o-- PirateGame : pirateGame
  PhysicsActor -up-|> BaseActor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
